--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^4.2.6",
     "axios": "^1.8.1",
+    "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
+    "vue-loading-overlay": "^6.0.6",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
